Nuevos nombres, se agrega pantalla de nosotros

--- a/Proyecto_Final_Programacion/src/main/webapp/ClientesSemestral.html
+++ b/Proyecto_Final_Programacion/src/main/webapp/ClientesSemestral.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Registro de Clientes</title>
-    <link rel="stylesheet" href="ResgistroClientes.css">
+    <link rel="stylesheet" href="ClientesSemestral.css">
 </head>
 <body>
 <div class="form-container">
     <h1>Registro de Clientes</h1>
-    <form action="RegistroClientes.jsp" method="post">
+    <form action="ClientesSemestral.jsp" method="post">
         <div class="form-group">
             <label for="p_nombre_cliente">Primer Nombre:</label>
             <input type="text" id="p_nombre_cliente" name="p_nombre_cliente" required>
