--- a/Proyecto_Final_Programacion/src/main/webapp/FacturasSemestral.html
+++ b/Proyecto_Final_Programacion/src/main/webapp/FacturasSemestral.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Registro de Factura</title>
-    <link rel="stylesheet" href="ResgistroFacturas.css">
+    <link rel="stylesheet" href="FacturasSemestral.css">
 </head>
 <body>
 <div class="form-container">
     <h1>Registro de Factura</h1>
-    <form action="RegistroFacturas.jsp" method="post">
+    <form action="FacturasSemestral.jsp" method="post">
         <div class="form-group">
             <label for="cedula_cliente">Cédula Cliente:</label>
             <input type="text" id="cedula_cliente" name="cedula_cliente" required>
