--- a/Proyecto_Final_Programacion/src/main/webapp/LoginSemestral.html
+++ b/Proyecto_Final_Programacion/src/main/webapp/LoginSemestral.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Inicio de Sesión</title>
-    <link rel="stylesheet" href="Login.css">
+    <link rel="stylesheet" href="LoginSemestral.css">
 </head>
 <body>
 <div class="container">
@@ -13,7 +13,7 @@
             <img src="Imagenes/Logo.png" alt="Logo">
         </div>
         <h1>Bienvenido!</h1>
-        <form action="Login.jsp" method="post">
+        <form action="LoginSemestral.jsp" method="post">
             <input type="text" name="correo" placeholder="Usuario@gmail.com" required>
             <input type="password" name="contrasena" placeholder="Contraseña" required>
             <button type="submit">Iniciar Sesión</button>
